changesinappconfig and teststeps

--- a/UnitTestProjectSpecflow/App.config
+++ b/UnitTestProjectSpecflow/App.config
@@ -38,13 +38,46 @@
 
 			</dependentAssembly>
 
-		</assemblyBinding>
-		<specFlow>
-			<unitTestProvider name="MsTest" />
+			<dependentAssembly>
 
-			<!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-		</specFlow>
+				<assemblyIdentity name="TechTalk.SpecFlow" publicKeyToken="0778194805d6db41" culture="neutral" />
+
+				<bindingRedirect oldVersion="0.0.0.0-3.9.0.0" newVersion="3.9.0.0" />
+
+			</dependentAssembly>
+
+			<dependentAssembly>
+
+				<assemblyIdentity name="TechTalk.SpecFlow.Generator" publicKeyToken="0778194805d6db41" culture="neutral" />
+
+				<bindingRedirect oldVersion="0.0.0.0-3.9.0.0" newVersion="3.9.0.0" />
+
+			</dependentAssembly>
+
+			<dependentAssembly>
+
+				<assemblyIdentity name="TechTalk.SpecFlow.Parser" publicKeyToken="0778194805d6db41" culture="neutral" />
+
+				<bindingRedirect oldVersion="0.0.0.0-3.9.0.0" newVersion="3.9.0.0" />
+
+			</dependentAssembly>
+
+			<dependentAssembly>
+
+				<assemblyIdentity name="TechTalk.SpecFlow.Utils" publicKeyToken="0778194805d6db41" culture="neutral" />
+
+				<bindingRedirect oldVersion="0.0.0.0-3.9.0.0" newVersion="3.9.0.0" />
+
+			</dependentAssembly>
+
+		</assemblyBinding>
+		
 	</runtime>
+	<specFlow>
+		<unitTestProvider name="MsTest" />
+
+		<!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+	</specFlow>
 	
 </configuration>
 
