--- a/UnitTestProjectSpecflow/packages.config
+++ b/UnitTestProjectSpecflow/packages.config
@@ -16,11 +16,23 @@
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="92.0.4515.10700" targetFramework="net472" />
   <package id="SpecFlow" version="3.9.22" targetFramework="net472" />
+  <package id="SpecFlow.CustomPlugin" version="3.9.22" targetFramework="net472" />
   <package id="SpecFlow.Internal.Json" version="1.0.8" targetFramework="net472" />
   <package id="SpecFlow.MsTest" version="3.9.22" targetFramework="net472" />
+  <package id="SpecFlow.MSTest.TestContext" version="1.0.1" targetFramework="net472" />
+  <package id="SpecFlow.Retry" version="2.4.0" targetFramework="net472" />
   <package id="SpecFlow.Tools.MsBuild.Generation" version="3.9.22" targetFramework="net472" />
+  <package id="System.CodeDom" version="4.4.0" targetFramework="net472" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net472" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Principal" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
   <package id="Utf8Json" version="1.3.7" targetFramework="net472" />
